# waveEquation

./: CMakeLists.txt  README.md  build_script.sh  mgard_energy_eval.sh  mgard_l2_eval.sh  obstacle.hpp  obstacle.tpp  sz_eval.sh  waveEnergy.cpp  waveEnergy_3d.cpp  waveEquation.hpp  waveEquation.tpp  waveInit.hpp  waveInit.tpp  wavePotential.cpp  waveProp.cpp  waveProp_3d.cpp  waveProp_twoStep.cpp  waveProp_twoStep_3d.cpp  waveProp_twoStep_3d_sz.cpp  waveProp_twoStep_3d_zfp.cpp  waveProp_twoStep_sz.cpp  waveProp_twoStep_zfp.cpp  zfp_eval.sh
